--- a/res/xml/custom_bat_number_settings.xml
+++ b/res/xml/custom_bat_number_settings.xml
@@ -28,7 +28,7 @@
 		android:title="Right Battery Bar" 
 		android:defaultValue="false"	/>       
    	
-	<Preference	
+	<DJSeekBarPreference	
 		android:layout="?android:attr/preferenceLayoutChild"
    		android:key="battery_bar_width"
 		android:title="Battery Bar Width"
@@ -47,14 +47,14 @@
 
  
     
-	<Preference
+	<DJSeekBarPreference
 	    android:layout="?android:attr/preferenceLayoutChild"
 		android:key="depleted_levels_one"
 		android:title="Max Level One"
 		android:summary="Maximimum level for the color"
 		android:defaultValue="10" />	
    
-	<Preference
+	<DJSeekBarPreference
 	    android:layout="?android:attr/preferenceLayoutChild"
 		android:key="depleted_levels_two"
 		android:title="Max Level Two"
@@ -70,14 +70,14 @@
 		android:key="battery_color_ranges"
 		android:summary="Battery colors based on battery level"	>    
  
-	<Preference
+	<DJSeekBarPreference
 	    android:layout="?android:attr/preferenceLayoutChild"
 		android:key="battery_levels_one"
 		android:title="Max Level One"
 		android:summary="Maximimum level for the color"
 		android:defaultValue="10" />	
     	
-	<Preference
+	<DJSeekBarPreference
 	    android:layout="?android:attr/preferenceLayoutChild"
 		android:key="battery_levels_two"
 		android:title="Max Level Two"
