--- a/res/xml/custom_pulldown_settings.xml
+++ b/res/xml/custom_pulldown_settings.xml
@@ -25,7 +25,7 @@
 		android:title="D A T E"
 		android:key="date_settings">
 
-	<Preference 
+	<DJSeekBarPreference 
 		android:layout="?android:attr/preferenceLayoutChild"
 		android:key="date_size"
 		android:title="Date Text Size"
@@ -49,7 +49,7 @@
 		android:defaultValue="true"	/>        
         				
   				
-	<Preference 
+	<DJSeekBarPreference 
 		android:layout="?android:attr/preferenceLayoutChild"
     	android:dependency="show_carrier"
 		android:key="carrier_size"
@@ -94,7 +94,7 @@
 		android:title="Show Battery Level" 
 		android:defaultValue="true"	/>		        
    				
-	<Preference 
+	<DJSeekBarPreference 
 		android:layout="?android:attr/preferenceLayoutChild"
     	android:dependency="show_battery_label"
 		android:key="battery_label_size"
@@ -118,7 +118,7 @@
 		android:defaultValue="true"	/>    
    				
   				
-	<Preference 
+	<DJSeekBarPreference 
 		android:layout="?android:attr/preferenceLayoutChild"
     	android:dependency="show_temp_label"
 		android:key="temp_label_size"
