--- a/res/xml/custom_led_settings.xml
+++ b/res/xml/custom_led_settings.xml
@@ -22,24 +22,34 @@
 		android:key="pulse_led_screen_on"
 		android:summaryOn="Pulse LED with Screen On"
 		android:summaryOff="Do not pulse LED with screen on"
-		android:title="LED Screen On" 
+		android:title="LED With Screen On" 
 		android:defaultValue="false" />
 
     <PreferenceCategory
 		android:title="D E F A U L T   L E D"
 		android:key="default_led">
-		
+
+	<CheckBoxPreference 
+	    android:layout="?android:attr/preferenceLayoutChild"
+		android:key="default_led_color_on"
+		android:summaryOn="Default LED color is on"
+		android:summaryOff="Default LED color is off"
+		android:title="Use Default LED Color" 
+		android:defaultValue="true" />        
+        		
 
 	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild"
+		android:dependency="default_led_color_on"
 		android:key="default_led_color"
 		android:title="Default LED Color"
-		android:summary="Color for default LED"
+		android:summary="Color for default LED if not set by app"
 		android:defaultValue="#ff3F9BBF" 
 		alphaSlider="false" /> 
 
 	<DJSeekBarPreference	
 		android:layout="?android:attr/preferenceLayoutChild"
+		android:dependency="default_led_color_on"
    		android:key="default_led_on_ms"
 		android:title="LED On Seconds (in 10ths)"
 		android:summary="Number of seconds LED is on"
@@ -47,6 +57,7 @@
 		
 	<DJSeekBarPreference	
 		android:layout="?android:attr/preferenceLayoutChild"
+		android:dependency="default_led_color_on"
    		android:key="default_led_off_ms"
 		android:title="LED Off Seconds (in 10ths)"
 		android:summary="Number of seconds LED is off"
@@ -59,8 +70,17 @@
 		android:title="I N C O M I N G   C A L L"
 		android:key="phone_leds">
 
+	<CheckBoxPreference 
+	    android:layout="?android:attr/preferenceLayoutChild"
+		android:key="incoming_call_led_on"
+		android:summaryOn="Incoming Call LED is on"
+		android:summaryOff="Incoming Call LED is off"
+		android:title="Use Imcoming Call LED" 
+		android:defaultValue="true" />         
+        
 	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild"
+		android:dependency="incoming_call_led_on"
 		android:key="incoming_call_color"
 		android:title="Incoming Call Color"
 		android:summary="LED color for incoming call"
@@ -69,6 +89,7 @@
 		
 	<CheckBoxPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
+		android:dependency="incoming_call_led_on"
 		android:key="incoming_call_pulse"
 		android:summaryOn="LED will pulse"
 		android:summaryOff="LED will be steady on"
@@ -98,8 +119,18 @@
 		android:title="M I S S E D   C A L L S"
 		android:key="missed_call_leds">
 
+	<CheckBoxPreference 
+	    android:layout="?android:attr/preferenceLayoutChild"
+		android:key="missed_call_led_on"
+		android:summaryOn="Missed Call LED is on"
+		android:summaryOff="Missed Call LED is off"
+		android:title="Use Missed Call LED" 
+		android:defaultValue="true" />         
+        
+        
 	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild"
+		android:dependency="missed_call_led_on"
 		android:key="missed_call_color"
 		android:title="LED Color"
 		android:summary="LED color for missed calls"
@@ -108,6 +139,7 @@
 		
 	<CheckBoxPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
+		android:dependency="missed_call_led_on"
 		android:key="missed_call_pulse"
 		android:summaryOn="LED will pulse"
 		android:summaryOff="LED will be steady on"
@@ -137,8 +169,19 @@
 		android:title="V O I C E   M A I L"
 		android:key="voice_mail_leds">
 
+	<CheckBoxPreference 
+	    android:layout="?android:attr/preferenceLayoutChild"
+		android:key="voice_mail_led_on"
+		android:summaryOn="Voice Mail LED is on"
+		android:summaryOff="Voice Mail LED is off"
+		android:title="Use Voice Mail LED" 
+		android:defaultValue="true" />         
+        
+        
+        
 	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild"
+		android:dependency="voice_mail_led_on"
 		android:key="voice_mail_color"
 		android:title="LED Color"
 		android:summary="LED color for voice mail calls"
@@ -147,6 +190,7 @@
 		
 	<CheckBoxPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
+		android:dependency="voice_mail_led_on"
 		android:key="voice_mail_pulse"
 		android:summaryOn="LED will pulse"
 		android:summaryOff="LED will be steady on"
