--- a/res/layout/custom_quiet_time.xml
+++ b/res/layout/custom_quiet_time.xml
@@ -11,7 +11,7 @@
     	android:layout_height="wrap_content"
     	android:orientation="vertical"
     	android:layout_marginTop="8dp"
-    	android:layout_marginBottom="4dp"
+    	android:layout_marginBottom="8dp"
     	android:layout_marginLeft="4dp"
     	android:layout_marginRight="4dp" >
 
@@ -25,7 +25,8 @@
         	android:layout_width="match_parent"
         	android:layout_height="wrap_content"
         	android:text="@string/junk_quiet_time"
-	    	android:layout_gravity="center_vertical" />    
+	    	android:layout_gravity="center_vertical" 
+	    	/>    
 
 		<ImageView
 		    android:id="@+id/quiet_time_onoff"
@@ -36,23 +37,53 @@
         	android:background="@drawable/junk_off" />
 	    
 	</FrameLayout>	
-	
-    <Button
-    	android:id="@+id/all_days"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dip"
-        android:text="@string/junk_quiet_time_all" />
 
-            
-	<TextView
-    	android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" 
-        android:layout_marginTop="10dip"
-        android:textSize="18dip" 
-        android:text="@string/junk_quiet_time_text_indiv" />            
+	<FrameLayout
+	   	android:layout_width="match_parent"
+    	android:layout_height="wrap_content"
+	    >    
+		<Button
+       		android:id="@+id/quiet_time_use_notif"
+        	android:layout_width="match_parent"
+        	android:layout_height="wrap_content"
+        	android:text="@string/junk_quiet_time_notif"
+	    	android:layout_gravity="center_vertical" 
+	    	/>    
+
+		<ImageView
+		    android:id="@+id/quiet_time_notif_onoff"
+    	    android:layout_width="24dp"
+    	    android:layout_height="24dp"
+       		android:layout_marginLeft="16dp"
+	    	android:layout_gravity="center_vertical"
+        	android:background="@drawable/junk_off" />
+	    
+	</FrameLayout>	
+	
+	
+	<FrameLayout
+	   	android:layout_width="match_parent"
+    	android:layout_height="wrap_content"
+	    >	
+		
+    	<Button
+    		android:id="@+id/all_days"
+        	android:layout_width="match_parent"
+        	android:layout_height="wrap_content"
+        	android:text="@string/junk_quiet_time_daily" 
+        	android:layout_marginTop="6dip"
+        	/>
+    
+		<ImageView
+		    android:id="@+id/quiet_time_daily_onoff"
+    	    android:layout_width="24dp"
+    	    android:layout_height="24dp"
+       		android:layout_marginLeft="16dp"
+	    	android:layout_gravity="center_vertical"
+        	android:background="@drawable/junk_off" />
+	    
+	</FrameLayout>	    
+
 
 	<FrameLayout
 	   	android:layout_width="match_parent"
@@ -65,7 +96,8 @@
        		android:layout_height="wrap_content"
         	android:textSize="16dip" 
         	android:layout_gravity="center_vertical" 
-        	android:text="@string/junk_quiet_time_sun" />
+        	android:text="@string/junk_quiet_time_sun"
+        	 />
 
     	<ImageView
 		    android:id="@+id/quiet_time_sunday_onoff"
@@ -88,7 +120,8 @@
     	    android:layout_height="wrap_content"
     	    android:layout_gravity="center_vertical" 
     	    android:text="@string/junk_quiet_time_mon"
-    	    android:textSize="16dip" />
+    	    android:textSize="16dip"
+    	     />
 
     	<ImageView
 		    android:id="@+id/quiet_time_monday_onoff"
@@ -201,6 +234,7 @@
 	<FrameLayout
 	   	android:layout_width="match_parent"
     	android:layout_height="wrap_content"
+    	android:layout_marginBottom="6dp"
 	    >    
 		    	    
     	<Button
