Added new battery meters

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -718,6 +718,8 @@
 		<item>Number</item>
        	<item>Circle</item>
        	<item>Pie</item>
+       	<item>Thinking Man</item>
+       	<item>The Dot</item>
        	<item>None</item>
     </string-array> 
  
@@ -726,7 +728,9 @@
 		<item>1</item>
        	<item>2</item>
 		<item>3</item>
-		<item>10</item>
+		<item>4</item>
+		<item>5</item>
+		<item>6</item>
     </string-array>    
     
     <string-array name="theme_presets">
