--- a/res/layout/custom_quiet_time.xml
+++ b/res/layout/custom_quiet_time.xml
@@ -4,7 +4,8 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:scrollbars="none" 
 	android:layout_width="match_parent" 
-	android:layout_height="fill_parent" >    
+	android:layout_height="fill_parent"
+	 >    
 		
 	<LinearLayout
     	android:layout_width="fill_parent"
@@ -13,7 +14,8 @@
     	android:layout_marginTop="8dp"
     	android:layout_marginBottom="8dp"
     	android:layout_marginLeft="4dp"
-    	android:layout_marginRight="4dp" >
+    	android:layout_marginRight="4dp"
+    	>
 
 
 	<FrameLayout
@@ -234,7 +236,6 @@
 	<FrameLayout
 	   	android:layout_width="match_parent"
     	android:layout_height="wrap_content"
-    	android:layout_marginBottom="6dp"
 	    >    
 		    	    
     	<Button
