--- a/res/xml/custom_pulldown_settings.xml
+++ b/res/xml/custom_pulldown_settings.xml
@@ -22,16 +22,42 @@
 
     
     <PreferenceCategory
-		android:title="D A T E"
-		android:key="date_settings">
+		android:title="H E A D E R"
+		android:key="header_settings">
 
+	<CheckBoxPreference
+		android:layout="?android:attr/preferenceLayoutChild"
+		android:key="header_clock_show"
+		android:summaryOn="Show the header clock in the pulldown"
+		android:summaryOff="Do not show the header clock in the pulldown"
+		android:title="Show Header Clock" 
+		android:defaultValue="true"	/>   
+		        
 	<DJSeekBarPreference 
 		android:layout="?android:attr/preferenceLayoutChild"
-		android:key="date_size"
-		android:title="Date Text Size"
-		android:summary="Size of the date text"
-		android:defaultValue="17" />		 	
+		android:key="header_clock_size"
+		android:title="Header Clock Text Size"
+		android:summary="Size of the header clock text"
+		android:defaultValue="35" />
+	
+    <CheckBoxPreference
+		android:layout="?android:attr/preferenceLayoutChild"
+		android:key="header_date_show"
+		android:summaryOn="Show the header date in the pulldown"
+		android:summaryOff="Do not show the header date in the pulldown"
+		android:title="Show Header Date" 
+		android:defaultValue="true"	/>   
+		        
+	<DJSeekBarPreference 
+		android:layout="?android:attr/preferenceLayoutChild"
+		android:key="header_date_size"
+		android:title="Header Date Text Size"
+		android:summary="Size of the header date text"
+		android:defaultValue="10" />		 	
 
+		 	
+		
+	
     </PreferenceCategory>    
     
     
